# hf-auth-helper

./: .gitignore  AGENTS.md  LICENSE  README.md  agent.env  pyproject.toml  slophammer.yml
.github/workflows/: ci.yml  publish.yml
docs/: SPECIFICATION.md
scripts/: check-mutation.py  vendor.py
src/hf_auth_helper/: __init__.py  cli.py  prefill.py  scopes.py  store.py  vendored.py  verify.py  wizard.py
tests/: conftest.py  test_cli.py  test_prefill.py  test_scopes.py  test_store.py  test_vendored.py  test_verify.py  test_wizard.py
